--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
 	<meta name="keywords" content="fotos">
 	<meta name="description" content="">
-	<base href="http://www.unaisangamer.com/">
+	<!-- <base href="http://www.unaisangamer.com/"> -->
+	<base href="http://localhost/caribbean.com/">
 	<title>Caribbean Photo Studio</title>
 	<!-- FAVICON AND APPLE TOUCH -->
 	<link rel="shortcut icon" href="favicon.png">
@@ -176,7 +177,7 @@
                     <ul>
                         <li data-transition="fade" data-thumb="images/index/revolution-slider/bg-slide-1.jpg">
 
-                            <img src="images/index/revolution-slider/bg-slide-1.jpg" alt="">
+                            <img src="images/index/revolution-slider/bg-slide-1.jpg" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-scalestart="100" data-scaleend="120">
 
 							<div class="tp-caption title-big-white"
 								 data-x="center"
@@ -225,7 +226,7 @@
 						</li>
 						<li data-transition="fade" data-thumb="images/index/revolution-slider/bg-slide-2.jpg">
 
-                            <img src="images/index/revolution-slider/bg-slide-2.jpg" alt="">
+                            <img src="images/index/revolution-slider/bg-slide-2.jpg" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-scalestart="100" data-scaleend="120">
 
 							<div class="tp-caption title-white-bold"
 								 data-x="center"
