--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
 	<meta name="keywords" content="fotos">
 	<meta name="description" content="">
-	<base href="http://www.unaisangamer.com/">
+	<!-- <base href="http://www.unaisangamer.com/"> -->
 	<!-- <base href="http://localhost/caribbean.com/"> -->
 	<title>Caribbean Photo Studio</title>
 	<!-- FAVICON AND APPLE TOUCH -->
