modulo de bannes

--- a/admin/index.html
+++ b/admin/index.html
@@ -249,6 +249,9 @@
     <!-- APLICATIVO -->
 
     <script src="app/pages/dashboard/dashboard.controller.js"></script>
+    <script src="app/pages/banner/banner.controller.js"></script>
+    <script src="app/pages/seccion/seccion.controller.js"></script>
+    <script src="app/pages/tipobanner/tipobanner.controller.js"></script>
 
     <script src="app/components/directives/vector-map.directive.js"></script>
     <script src="app/components/directives/validate-on-submit.directive.js"></script>
