se oculta el buscador

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 								<li class="">
 									<a href="#">Contacto</a>
 								</li>
-								<li class="search">
+								<li class="search" ng-show="false">
 
 									<a href="#search-form-container"><i class="halcyon-icon-search-1"></i></a>
 
