--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<link rel="shortcut icon" href="favicon.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-180x180.png">
 	<meta name="msapplication-TileImage" content="mstile.png">
-	<meta name="msapplication-TileColor" content="#8a1a4a">
-	<meta name="theme-color" content="#8a1a4a">
+	<meta name="msapplication-TileColor" content="#1574a6">
+	<meta name="theme-color" content="#1574a6">
 
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
