--- a/admin/index.html
+++ b/admin/index.html
@@ -275,6 +275,7 @@
     <script src="app/components/directives/anchor-scroll.directive.js"></script>
     <script src="app/components/directives/active-toggle.directive.js"></script>
     <script src="app/components/directives/activate-button.directive.js"></script>
+    <script src="app/components/directives/upload-me.directive.js"></script>
     <script src="app/index.run.js"></script>
     <script src="app/index.route.js"></script>
     <script src="app/index.controller.js"></script>
