edicion de banner

--- a/admin/app/pages/banner/banner.html
+++ b/admin/app/pages/banner/banner.html
@@ -33,6 +33,9 @@
               <div class="form-group pull-right">
                 <button type="button" class="btn btn-success" ng-click='b.btnNuevo()'>Nuevo</button>
               </div>
+              <div class="form-group pull-right">
+                <!-- <button ng-show="b.mySelectionGrid.length == 1" type="button" class="btn btn-warning mr-sm" ng-click='b.btnEditar()'>Editar</button> -->
+              </div>
             </div>
             <div class="col-md-12 col-sm-12">
               <div ui-grid="b.gridOptions" ui-grid-selection ui-grid-auto-resize ui-grid-pagination class="grid table-responsive clear"></div>
