--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                             <img src="images/index/revolution-slider/bg-slide-1.jpg" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-scalestart="100" data-scaleend="120">
 
-							<div class="tp-caption title-big-white"
+							<!-- <div class="tp-caption title-big-white"
 								 data-x="center"
 								 data-y="center"
 								 data-voffset="-100"
@@ -155,8 +155,8 @@
 								 data-speed="300"
 								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
 								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 Create
-							</div>
+								 Obtén tus fotos
+							</div> -->
 
 							<div class="tp-caption title-big-white"
 								 data-x="center"
@@ -165,10 +165,10 @@
 								 data-speed="300"
 								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
 								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 space with
+								 Caribbean
 							</div>
 
-							<div class="tp-caption title-big-white"
+							<!-- <div class="tp-caption title-big-white"
 								 data-x="center"
 								 data-y="center"
 								 data-voffset="110"
@@ -176,8 +176,8 @@
 								 data-speed="300"
 								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
 								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 Halcyon
-							</div>
+								 CARIBBEAN
+							</div> -->
 
 							<div class="tp-caption subtitle-white text-center"
 								 data-x="center"
@@ -187,8 +187,7 @@
 								 data-speed="300"
 								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
 								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 Hundred unique sections to choose from <br>
-								 +30 Different Layouts, with free updates
+								 Fotos digitales de Alta Calidad
 							</div>
 
 						</li>
@@ -204,7 +203,7 @@
 								 data-speed="300"
 								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
 								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 Build your space
+								 CARIBBEAN
 							</div>
 
 							<div class="tp-caption title-white-bold"
@@ -214,7 +213,7 @@
 								 data-speed="300"
 								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
 								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 with Halcyon
+								 Photo Studio
 							</div>
 
 							<div class="tp-caption"
@@ -225,7 +224,7 @@
 								 data-speed="300"
 								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
 								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 <a class="btn btn-default-1 waves" href="#">Purchase <i class="fa fa-angle-right"></i></a>
+								 <a class="btn btn-default-1 waves" href="#">Mas Informacion <i class="fa fa-angle-right"></i></a>
 							</div>
 
 						</li>
