--- a/admin/app/pages/banner/banner.html
+++ b/admin/app/pages/banner/banner.html
@@ -31,7 +31,7 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <div class="form-group pull-right">
-                <button type="button" class="btn btn-success" ng-click='b.btnNuevo()'>Nuevo</button>
+                <button class="btn btn-success" ng-click='b.btnNuevo()'>Nuevo</button>
               </div>
               <div class="form-group pull-right">
                 <!-- <button ng-show="b.mySelectionGrid.length == 1" type="button" class="btn btn-warning mr-sm" ng-click='b.btnEditar()'>Editar</button> -->
