--- a/admin/index.html
+++ b/admin/index.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/helpers.css">
     <link rel="stylesheet" href="assets/css/custom.css">
+    <!-- <link rel="stylesheet" href="../assets/plugins/alertifyjs/css/alertify.css"> -->
     <!-- endinject -->
     <!-- endbuild -->
   </head>
@@ -76,7 +77,7 @@
 
       <minotaur-loading></minotaur-loading>
 
-      <minotaur-customize></minotaur-customize>
+      <!-- <minotaur-customize></minotaur-customize> -->
 
     </div>
 
@@ -232,7 +233,8 @@
     <script src="assets/plugins/highcharts/js/highcharts.js"></script>
     <script src="assets/plugins/highcharts/js/themes/grid-light.js"></script>
     <script src="assets/plugins/highcharts/js/modules/exporting.js"></script>
-    <!-- endbuild -->
+
+    <!-- <script src="../assets/plugins/alertifyjs/alertify.js"></script> -->
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
@@ -245,6 +247,7 @@
 
     <script src="app/pages/pages-login/pages-login.controller.js"></script>
     <script src="app/pages/pages-forgotpass/pages-forgotpass.controller.js"></script>
+    <!-- endbuild -->
 
     <!-- APLICATIVO -->
 
