--- a/index.html
+++ b/index.html
@@ -147,51 +147,9 @@
 
                             <img src="images/index/revolution-slider/bg-slide-1.jpg" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-scalestart="100" data-scaleend="120">
 
-							<!-- <div class="tp-caption title-big-white"
-								 data-x="center"
-								 data-y="center"
-								 data-voffset="-100"
-								 data-start="1200"
-								 data-speed="300"
-								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
-								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 Obtén tus fotos
-							</div> -->
-
-							<div class="tp-caption title-big-white"
-								 data-x="center"
-								 data-y="center"
-								 data-start="1250"
-								 data-speed="300"
-								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
-								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 Caribbean
-							</div>
-
-							<!-- <div class="tp-caption title-big-white"
-								 data-x="center"
-								 data-y="center"
-								 data-voffset="110"
-								 data-start="1300"
-								 data-speed="300"
-								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
-								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 CARIBBEAN
-							</div> -->
-
-							<div class="tp-caption subtitle-white text-center"
-								 data-x="center"
-								 data-y="center"
-								 data-voffset="240"
-								 data-start="1400"
-								 data-speed="300"
-								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
-								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 Fotos digitales de Alta Calidad
-							</div>
 
 						</li>
-						<li data-transition="fade" data-thumb="images/index/revolution-slider/bg-slide-2.jpg">
+						<li data-transition="fade">
 
                             <img src="images/index/revolution-slider/bg-slide-2.jpg" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-scalestart="100" data-scaleend="120">
 
