--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								<!-- <li class="login" ng-if="!fSessionCI">
 									<a class="btn btn-default-2 waves" href="" fancybox ng-click="openFancybox('popups/login_view.html')">Acceso a tu cuenta</a>
 								</li> -->
-								<li class="login" ng-if="fSessionCI">
+								<li class="login">
 									<a class="btn btn-default-2 waves" href="{{dirWeb}}admin" target="_blank">Acceso a tu cuenta!</a>
 								</li>
 							</ul>
@@ -140,55 +140,55 @@
 		</header>
 		<!-- PAGE CONTENT -->
 		<div id="page-content">
-			<div class="rev_slider_wrapper">
-                <div class="rev_slider" data-version="5.0">
-                    <ul>
-                        <li data-transition="fade" data-thumb="images/index/revolution-slider/bg-slide-1.jpg">
-
-                            <img src="images/index/revolution-slider/bg-slide-1.jpg" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-scalestart="100" data-scaleend="120">
-
-
-						</li>
-						<li data-transition="fade">
-
-                            <img src="images/index/revolution-slider/bg-slide-2.jpg" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-scalestart="100" data-scaleend="120">
-
-							<div class="tp-caption title-white-bold"
-								 data-x="center"
-								 data-y="center"
-								 data-voffset="-90"
-								 data-start="1200"
-								 data-speed="300"
-								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
-								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 CARIBBEAN
-							</div>
-
-							<div class="tp-caption title-white-bold"
-								 data-x="center"
-								 data-y="center"
-								 data-start="1250"
-								 data-speed="300"
-								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
-								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 Photo Studio
-							</div>
-
-							<div class="tp-caption"
-								 data-x="center"
-								 data-y="center"
-								 data-voffset="90"
-								 data-start="1300"
-								 data-speed="300"
-								 data-transform_in="o:0;y:100;s:500;e:Power2.easeInOut;"
-								 data-transform_out="o:0;y:-100;s:500;e:Power2.easeInOut;">
-								 <a class="btn btn-default-1 waves" href="#">Mas Informacion <i class="fa fa-angle-right"></i></a>
-							</div>
-
-						</li>
-					</ul>
-				</div><!-- rev_slider_wrapper -->
-			</div><!-- rev_slider -->
+			<div class="container-fluid" data-ng-style="{'max-width':'1920px'}">
+			    <!-- slider parent container -->
+			    <section class="content-section" data-ng-style="{'max-width':'1920px', 'margin':'0 auto'}">
+			      <!-- slider container -->
+					<div class="rev_slider_wrapper" style="background-color:#ddd;margin:0px auto;padding:0px;margin-top:50px;margin-bottom:80px;">
+			        	<!-- angular-revolution as attribute in div -->
+				        <div rev-slider ng-if="slides"
+				          id="rev_slider"
+				          class="rev_slider"
+				          data-version="5.1.1RC"
+				          slider-Type="{{slider.sliderType}}"
+				          slider-Layout="{{slider.sliderLayout}}"
+				          responsive-Levels="{{slider.responsiveLevels}}"
+				          gridwidth="{{slider.gridwidth}}"
+				          gridheight="{{slider.gridheight}}"
+				          auto-Height="{{slider.autoHeight}}"
+				          min-Height="{{slider.minHeight}}"
+				          full-Screen-Offset-Container="{{slider.fullScreenOffsetContainer}}"
+				          full-Screen-Offset="{{slider.fullScreenOffset}}"
+				          delay="{{slider.delay}}"
+				          disable-Progress-Bar="{{slider.disableProgressBar}}"
+				          start-Delay="{{slider.startDelay}}"
+				          stop-After-Loops="{{slider.stopAfterLoops}}"
+				          stop-At-Slide="{{slider.stopAtSlide}}"
+				          view-Port="{{slider.viewPort}}"
+				          lazy-Type="{{slider.lazyType}}"
+				          dotted-Overlay="{{slider.dottedOverlay}}"
+				          shadow="{{slider.shadow}}"
+				          spinner="{{slider.spinner}}"
+				          hide-All-Caption-At-Lilmit="{{slider.hideAllCaptionAtLilmit}}"
+				          hide-Caption-At-Limit="{{slider.hideCaptionAtLimit}}"
+				          hide-Slider-At-Limit="{{slider.hideSliderAtLimit}}"
+				          debug-Mode="{{slider.debugMode}}"
+				          extensions="{{slider.extensions}}"
+				          extensionssuffix="{{slider.extensions_suffix}}"
+				          fallbacks="{{slider.fallbacks}}"
+				          parallax="{{slider.parallax}}"
+				          rev-Carousel="{{slider.carousel}}"
+				          navigation="{{slider.navigation}}"
+				          js-File-Location="{{slider.jsFileLocation}}"
+				          visibility-Levels="{{slider.visibilityLevels}}"
+				          hide-Thumbs-On-Mobile="{{slider.hideThumbsOnMobile}}"
+				          slides="slides"
+				          slider-Template-Url="templates/slider.tpl2.html"
+				        >
+				        </div>
+			      	</div>
+			    </section>
+			</div>
 
 			<div class="container">
 				<div class="row">
@@ -606,6 +606,8 @@
 	<script src="assets/plugins/fancybox/jquery.fancybox.pack.js"></script>
 
 	<!-- REVOLUTION SLIDER  -->
+	<script src="bower_components/angular-revolution/release/angular-revolution.js"></script>
+
 	<script src="assets/plugins/revolutionslider/js/jquery.themepunch.tools.min.js"></script>
 	<script src="assets/plugins/revolutionslider/js/jquery.themepunch.revolution.min.js"></script>
 	<script src="assets/plugins/revolutionslider/js/extensions/revolution.extension.actions.min.js"></script>
