--- a/admin/index.html
+++ b/admin/index.html
@@ -255,6 +255,7 @@
     <script src="app/pages/banner/banner.controller.js"></script>
     <script src="app/pages/seccion/seccion.controller.js"></script>
     <script src="app/pages/tipobanner/tipobanner.controller.js"></script>
+    <script src="app/pages/config/config.controller.js"></script>
 
     <script src="app/components/directives/vector-map.directive.js"></script>
     <script src="app/components/directives/validate-on-submit.directive.js"></script>
@@ -279,6 +280,7 @@
     <script src="app/components/directives/active-toggle.directive.js"></script>
     <script src="app/components/directives/activate-button.directive.js"></script>
     <script src="app/components/directives/upload-me.directive.js"></script>
+    <script src="app/components/directives/image.directive.js"></script>
     <script src="app/index.run.js"></script>
     <script src="app/index.route.js"></script>
     <script src="app/index.controller.js"></script>
