--- a/index.html
+++ b/index.html
@@ -529,15 +529,104 @@
 		<!-- FOOTER -->
 		<footer id="footer-container">
 
-			<div id="footer" class="default-color">
+			<div id="footer">
 
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-12">
+						<div class="col-sm-2">
+
+							<div class="widget widget-text">
+
+								<div>
+
+									<img src="assets/images/footer-logo.png" alt="">
+
+								</div>
+
+							</div><!-- widget-text -->
+
+						</div><!-- col -->
+						<div class="col-sm-7">
+
+							<div class="widget widget-pages last">
+
+								<h6 class="widget-title">Learn More</h6>
+
+								<ul>
+									<li><a href="#">Home</a></li>
+									<li><a href="#">Our Customers</a></li>
+									<li><a href="#">Pricing and Plans</a></li>
+									<li><a href="#">New Features</a></li>
+									<li><a href="#">Jobs</a></li>
+								</ul>
+
+							</div><!-- widget-pages -->
+
+							<div class="widget widget-pages last">
+
+								<h6 class="widget-title">Support</h6>
+
+								<ul>
+									<li><a href="#">Company</a></li>
+									<li><a href="#">The Blog</a></li>
+									<li><a href="#">Testimonials</a></li>
+									<li><a href="#">Pricing and Plans</a></li>
+									<li><a href="#">New Features</a></li>
+									<li><a href="#">Terms of service</a></li>
+								</ul>
+
+							</div><!-- widget-pages -->
+
+							<div class="widget widget-pages">
+
+								<h6 class="widget-title">About us</h6>
+
+								<ul>
+									<li><a href="#">About us</a></li>
+									<li><a href="#">Our team</a></li>
+									<li><a href="#">Memebers</a></li>
+									<li><a href="#">Company History</a></li>
+									<li><a href="#">Why choose us</a></li>
+									<li><a href="#">Faq</a></li>
+								</ul>
+
+							</div><!-- widget-pages -->
+
+						</div><!-- col -->
+						<div class="col-sm-3">
+
+							<div class="widget widget-contact">
+
+								<h6 class="widget-title">Contact</h6>
+
+								<ul>
+									<li>
+										<i class="fa fa-map-marker"></i>
+										4124 Barnes Street, Sanford, <br class="visible-lg-block"> FL 32771
+									</li>
+									<li>
+										<i class="fa fa-phone"></i>
+										407-322-2171
+									</li>
+									<li>
+										<i class="fa fa-envelope"></i>
+										<a href="mailto:hello@milothemes.com">hello@milothemes.com</a>
+									</li>
+								</ul>
+
+							</div><!-- widget-contact -->
+
+						</div><!-- col -->
+					</div><!-- row -->
+				</div><!-- container -->
+
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-push-9 col-sm-3">
 
 							<div class="widget widget-social">
 
-								<div class="social-media text-center">
+								<div class="social-media">
 
 									<a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
 									<a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
@@ -550,24 +639,13 @@
 							</div><!-- widget-social -->
 
 						</div><!-- col -->
-					</div><!-- row -->
-				</div><!-- container -->
-
-			</div><!-- footer -->
-
-			<div id="footer-bottom">
-
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-12">
+						<div class="col-sm-pull-3 col-sm-9">
 
 							<div class="widget widget-text">
 
-								<div class="text-center">
+								<div>
 
-									<img src="assets/images/footer-logo.png" alt="">
-
-									<p><small>2017 &copy; All rights reserved</small></p>
+									<p><small>Hementxe &copy; 2017. All Rights Reserved.</small></p>
 
 								</div>
 
@@ -577,7 +655,8 @@
 					</div><!-- row -->
 				</div><!-- container -->
 
-			</div><!-- footer-bottom -->
+			</div><!-- footer -->
+
 		</footer><!-- FOOTER CONTAINER -->
 	</div><!-- MAIN CONTAINER -->
 	<!-- SCROLL UP -->
