--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<base href="{{dirWeb}}">
 	<title>Caribbean Photo Studio</title>
 	<!-- FAVICON AND APPLE TOUCH -->
-	<link rel="shortcut icon" href="favicon.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-180x180.png">
-	<meta name="msapplication-TileImage" content="mstile.png">
+	<link rel="shortcut icon" href="assets/images/favicon.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-180x180.png">
+	<meta name="msapplication-TileImage" content="assets/images/mstile.png">
 	<meta name="msapplication-TileColor" content="#1574a6">
 	<meta name="theme-color" content="#1574a6">
 
