--- a/admin/app/pages/config/config.html
+++ b/admin/app/pages/config/config.html
@@ -110,7 +110,7 @@
                     <div class="form-group col-md-6">
                       <label class="control-label minotaur-label">Favicon (32 x 32)<span class="text-red">*</span>: </label>
                       <div ng-show="cg.fData.favicon && !cg.fData.cFavicon" >
-                        <img class="mt-md" ng-src="../{{cg.fData.favicon}}" alt="favicon" style="width: 32px">
+                        <img class="mt-md" ng-src="../assets/images/{{cg.fData.favicon}}" alt="favicon" style="width: 32px">
                          <a href="" class="block" style="width: 110px" ng-click="cg.fData.cFavicon=true">Cambiar Imagen</a>
                       </div>
                       <div ng-show="cg.fData.cFavicon">
@@ -136,7 +136,7 @@
                     <div class="form-group col-md-6">
                       <label class="control-label minotaur-label">Apple Icon (180 x 180)<span class="text-red">*</span>: </label>
                       <div ng-show="cg.fData.apple_icon && !cg.fData.cAppleIcon" >
-                        <img class="mt-md" ng-src="../{{cg.fData.apple_icon}}" alt="appleIcon" style="width: 180px">
+                        <img class="mt-md" ng-src="../assets/images/{{cg.fData.apple_icon}}" alt="appleIcon" style="width: 180px">
                          <a href="" class="block" style="width: 110px" ng-click="cg.fData.cappleIcon=true">Cambiar Imagen</a>
                       </div>
                       <div ng-show="cg.fData.cAppleIcon">
