--- a/admin/app/pages/config/config.html
+++ b/admin/app/pages/config/config.html
@@ -137,7 +137,7 @@
                       <label class="control-label minotaur-label">Apple Icon (180 x 180)<span class="text-red">*</span>: </label>
                       <div ng-show="cg.fData.apple_icon && !cg.fData.cAppleIcon" >
                         <img class="mt-md" ng-src="../assets/images/{{cg.fData.apple_icon}}" alt="appleIcon" style="width: 180px">
-                         <a href="" class="block" style="width: 110px" ng-click="cg.fData.cappleIcon=true">Cambiar Imagen</a>
+                         <a href="" class="block" style="width: 110px" ng-click="cg.fData.cAppleIcon=true">Cambiar Imagen</a>
                       </div>
                       <div ng-show="cg.fData.cAppleIcon">
                         <input type="file" image="cg.fData.newAppleIcon" accept=".gif, .jpg, .png, .jpeg">
