--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 
 							<ul class="menu clearfix" id="menu">
 								<li class="active">
-									<a href="index.html">Inicio</a>
+									<a href="#">Inicio</a>
 								</li>
 								<li class="dropdown">
 									<a href="#">Servicios</a>
-									<ul>
+									<ul ng-if="false">
 										<li class="dropdown">
 											<a class="waves" href="#">Servicios 1</a>
 											<ul>
