--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-9">
 
 						<h3>A huge number of demos to choose from</h3>
 
@@ -210,19 +210,19 @@
 						<p><a class="btn btn-default-1 waves" href="#">Discover</a></p>
 
 					</div><!-- col -->
-					<div class="col-md-6">
+					<div class="col-md-3">
 
 						<div class="row">
-							<div class="col-sm-6">
+							<div class="col-sm-12">
 
-								<p><img class="wow fadeInRight" src="images/index/image-20.jpg" alt=""></p>
+								<p><img class="wow fadeInRight" src="uploads/banners/LATERAL/image-21.jpg" alt=""></p>
 
 							</div><!-- col -->
-							<div class="col-sm-6">
+							<!-- <div class="col-sm-6">
 
 								<p><img class="wow fadeInRight" src="images/index/image-21.jpg" alt="" data-wow-delay="0.1s"></p>
 
-							</div><!-- col -->
+							</div> --><!-- col -->
 						</div><!-- row -->
 
 					</div><!-- col -->
@@ -238,8 +238,8 @@
 
 								<h2>After years of constant research we came up with Halcyon. A new Experience.</h2>
 
-								<p>designed and developed by <strong>milothemes</strong>. <br>
-								Sold <strong>exclusivley</strong> on Envato Marketplace</p>
+								<p>designed and developed by <strong>Hementxe</strong>. <br>
+								Sold <strong>exclusively</strong> on Hementxe</p>
 
 								<br>
 
